@@ -12,6 +12,8 @@
  *******************************************************************************/
 package org.eclipse.sirius.web.services.explorer;
 
+import java.util.Optional;
+
 import org.eclipse.sirius.components.core.RepresentationMetadata;
 import org.eclipse.sirius.components.core.api.IRepresentationMetadataProvider;
 import org.eclipse.sirius.components.trees.Tree;
@@ -26,13 +28,11 @@ import org.springframework.stereotype.Service;
 public class ExplorerMetadataProvider implements IRepresentationMetadataProvider {
 
     @Override
-    public boolean canHandle(String representationId) {
-        return representationId != null && representationId.startsWith(ExplorerDescriptionProvider.PREFIX);
-    }
-
-    @Override
-    public RepresentationMetadata handle(String representationId) {
-        return new RepresentationMetadata(representationId, Tree.KIND, ExplorerDescriptionProvider.REPRESENTATION_NAME, ExplorerDescriptionProvider.DESCRIPTION_ID);
+    public Optional<RepresentationMetadata> getMetadata(String representationId) {
+        if (representationId.startsWith(ExplorerDescriptionProvider.PREFIX)) {
+            return Optional.of(new RepresentationMetadata(representationId, Tree.KIND, ExplorerDescriptionProvider.REPRESENTATION_NAME, ExplorerDescriptionProvider.DESCRIPTION_ID));
+        }
+        return Optional.empty();
     }
 
 }
