@@ -15,6 +15,7 @@ package org.eclipse.sirius.web.services.representations;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
 import java.util.Objects;
+import java.util.Optional;
 
 import org.eclipse.sirius.components.core.RepresentationMetadata;
 import org.eclipse.sirius.components.core.api.IRepresentationMetadataProvider;
@@ -42,20 +43,14 @@ public class PersistentRepresentationMetadataProvider implements IRepresentation
     }
 
     @Override
-    public boolean canHandle(String representationId) {
-        return new IDParser().parse(representationId).map(this.representationRepository::existsById).orElse(false);
-    }
-
-    @Override
-    public RepresentationMetadata handle(String representationId) {
+    public Optional<RepresentationMetadata> getMetadata(String representationId) {
         return new IDParser().parse(representationId)
                 .flatMap(this.representationRepository::findById)
                 .map(new RepresentationMapper(this.objectMapper)::toDTO)
                 .map(RepresentationDescriptor::getRepresentation)
                 .filter(IRepresentation.class::isInstance)
                 .map(IRepresentation.class::cast)
-                .map(representation -> new RepresentationMetadata(representation.getId(), representation.getKind(), representation.getLabel(), representation.getDescriptionId()))
-                .orElse(null);
+                .map(representation -> new RepresentationMetadata(representation.getId(), representation.getKind(), representation.getLabel(), representation.getDescriptionId()));
     }
 
 }
